bin_PROGRAMS = bldccantest bldclog bldcconfigure
bldccantest_SOURCES = bldccantest.c
bldccantest_LDADD = libbldc.la
bldclog_SOURCES = bldclog.c
bldclog_LDADD = libbldc.la
bldcconfigure_SOURCES = bldcconfigure.c
bldcconfigure_LDADD = libbldc.la
lib_LTLIBRARIES = libbldc.la
libbldc_la_SOURCES = bldc.c
include_HEADERS = bldc.h
